Blender 2.70 Bug: Properties - Object Data: "Active Spline"-Panel is missing. #39935

Closed
opened 2014-04-28 16:16:12 +02:00 by Chris Martin · 8 comments

System Information
Win8

Blender Version
Broken: 2.70
Worked: 2.69

Short description of error

Blender 2.70 Bug: Properties - Object Data: "Active Spline"-Panel is missing.

Exact steps for others to reproduce the error

First I create a 3D Surface Object from several Surface Nurbs Circles:

Add- Surface - Nurbs Circle

Create 3D Surface Object by adding several Nurbs Circles, translating them, then select all of them, Ctrl Join, "edit mode", select "All" vertices, then type "F" to create surface.

This surface is in the attached file.

Now select the created surface, "Edit Mode", and in Blender 2.69, in the Properties Editor: "Object Data",SurfaceNurbsCircleObject.blend
we get a panel "Active Spline" (which I desperately need!).

But not so in Blender 2.70.

**System Information** Win8 **Blender Version** Broken: 2.70 Worked: 2.69 **Short description of error** Blender 2.70 Bug: Properties - Object Data: "Active Spline"-Panel is missing. **Exact steps for others to reproduce the error** First I create a 3D Surface Object from several Surface Nurbs Circles: Add- Surface - Nurbs Circle Create 3D Surface Object by adding several Nurbs Circles, translating them, then select all of them, Ctrl Join, "edit mode", select "All" vertices, then type "F" to create surface. This surface is in the attached file. Now select the created surface, "Edit Mode", and in Blender 2.69, in the Properties Editor: "Object Data",[SurfaceNurbsCircleObject.blend](https://archive.blender.org/developer/F86291/SurfaceNurbsCircleObject.blend) we get a panel "Active Spline" (which I desperately need!). But not so in Blender 2.70.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @chrissie

Added subscriber: @chrissie

Added subscriber: @mont29

Added subscriber: @mont29
Sergey Sharybin was assigned by Bastien Montagne 2014-04-28 16:29:16 +02:00

Sergey, think this one is for you.

@chrissie: you can workaround the issue for now by selecting (in edit mode) one control point, for me it 'refreshes' somehow the activespline stuff and panel reappears.

Sergey, think this one is for you. @chrissie: you can workaround the issue for now by selecting (in edit mode) one control point, for me it 'refreshes' somehow the activespline stuff and panel reappears.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

It's possible that some operators would loose active spline. It's how it worked for ages actually. Would be nice to get improved for duplication, but consider this is a TODO listed there http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Tools#Curves

Thanks for the report, but closing it now.

It's possible that some operators would loose active spline. It's how it worked for ages actually. Would be nice to get improved for duplication, but consider this is a TODO listed there http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Tools#Curves Thanks for the report, but closing it now.

This issue was referenced by 2f80d304b0

This issue was referenced by 2f80d304b0d50ea25367219b339bcfaa7958bbf4

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Sign in to join this conversation.
5 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#39935
No description provided.