Fix T39935: Duplicate looses active curve spline